tests/test_assets/semantic/valid/switch/boolean_switch.cog
classify_bool::(b: bool) -> i32 {
    switch b {
        case true:
            return 1;

        case false:
            return 0;
    }
}
