tests/test_assets/semantic/invalid/control_flow/switch_branch_missing_return.cog
test::(value: i32) -> i32 {
    switch value {
        case 0:
            return 1;

        default:
            result := 2;
    }
}